Fix: Color input preview is not visible

--- a/www/comps/input.css
+++ b/www/comps/input.css
@@ -519,7 +519,7 @@
 	display:flex;
 	flex-flow:row nowrap;
 	justify-content:space-between;
-	align-items:center;
+	align-items:stretch;
 	gap:12px;
 }
 .input-color-picker{
